css/app.css
/**
 * ==================================================================================================
 * APP.CSS
 * ==================================================================================================
 * Author: Kaitlin Kidd
 * Date: 09.29.16
 * Version: 0.0.1
 * Purpose: Main styles for app.
 * Notes:
 * --- W3C CSS Validation: http://jigsaw.w3.org/css-validator/#validate_by_uri
 * --- Accordion styles: http://www.w3schools.com/howto/howto_js_accordion.asp
 * --- Fixed Top Navbar for Bootstrap - https://getbootstrap.com/examples/navbar-fixed-top/
 * --------------------------------------------------------------------------------------------------
 * Revision History
 * --------------------------------------------------------------------------------------------------
 * Date          Revision Description                                                     Modified By
 * --------------------------------------------------------------------------------------------------
 * 09.29.2016 - Created Original Document                                          KAK
 * ==================================================================================================
 *
 * -- Contents --
 * 00. Defaults
 * 01. Nav
 * 02. Hero
 * 03. Demo
 * 04. Code
 * 05. Sources
 *
 */

 /*************************
 * 00. Defaults
 *************************/
 body, html {
    width: 100%;
    height: 100%;
}

body, h1, h2, h3, h4, h5 {
    font-family: 'Dosis', sans-serif;
    font-weight: 800;
}

h1 {
    text-transform: uppercase;
}

h2 {
    text-transform: uppercase;
    text-align: left;
}

h3 {
    text-transform: lowercase;
    font-style: italic;
}

h4 {
    text-transform: lowercase;
    color: #fff;
    font-size: 25px;
}

h5 {
    text-transform: lowercase;
    color: #fff;
    font-size: 17px;
}

hr {
    width: 150px;
    float: left;
    border-top: 3px solid #e7e7e7;
}

.heading {
    text-transform: uppercase;
    text-align: left;
    color: #e5e5e5;
}

.subheading {
    color: #8e8e8e;
    font-style: italic;
    font-weight: bold;
    font-size: 14px;
}

.link:link {
    color: #734c53;
    text-decoration: none;
}

.link:visited {
    color: #734c53;
    text-decoration: none;
}

.link:hover {
    color: #734c53;
    text-decoration: none;
}

.link:active {
    color: #734c53;
    text-decoration: none;
}

a:link {
    text-decoration: none;
}

a:visited {
    text-decoration: none;
}

a:hover {
    text-decoration: none;
}

a:active {
    text-decoration: none;
}

/*************************
 * 01. Nav
 *************************/
 .navbar-default {
     background-color: #020106;
     border-color: #020106;
 }

 .navbar-default .navbar-brand{
  color: #ffffff;
  font-size: 1.2em;
}

.navbar-default .navbar-brand:hover {
    color: #ffffff;
    font-size: 1.2em;
}

.navbar-default .navbar-brand {
 color: #ffffff;
 font-size: 1.2em;
}

.navbar-default .navbar-nav>li>a {
    color: #ffffff;
}

.navbar-default .navbar-nav>li>a:hover {
    background-color:#e7e7e7;
    color: #4c375b;
}

/*************************
 * 02. Hero
 *************************/
#hero {
     text-align: center;
     color: #f8f8f8;
     background: url(../img/hero.jpeg) no-repeat center center;
     background-size: cover;
 }

 #hero-heading {
     position: relative;
     padding-top: 20%;
     padding-bottom: 20%;
 }

  #hero-heading > h1 {
     margin: 0;
     font-size: 5em;
 }

#hero-hr {
     width: 380px;
     border-top: 1px solid #f8f8f8;
     border-bottom: 1px solid rgba(0,0,0,0.2);
     float: inherit;
 }

 .scroller {
   width: 75px;
   height: 45px;
   margin-top: 15px;
   padding: 0px 16px;
   border: 2px solid white;
   font-size: 30px;
   color: white;
   background: transparent;
   -webkit-transition: background 0.3s ease-in-out;
   -moz-transition: background 0.3s ease-in-out;
   transition: background 0.3s ease-in-out;
 }

 .scroller:hover,
 .scroller:focus {
   outline: none;
   color: white;
   background: rgba(255, 255, 255, 0.1);
 }

 /*************************
  * 03. Demo
  *************************/
  #demo {
      min-height: 350px;
      padding: 50px 0;
      background-color: #060201;
      border-top: 1px solid #e7e7e7;
      border-bottom: 1px solid #e7e7e7;
  }

  .starItem {
    background: #c5d1d9;
    background-image: -webkit-linear-gradient(top, #c5d1d9, #7b7f82);
    background-image: -moz-linear-gradient(top, #c5d1d9, #7b7f82);
    background-image: -ms-linear-gradient(top, #c5d1d9, #7b7f82);
    background-image: -o-linear-gradient(top, #c5d1d9, #7b7f82);
    background-image: linear-gradient(to bottom, #c5d1d9, #7b7f82);
    -webkit-border-radius: 9;
    -moz-border-radius: 9;
    border-radius: 9px;
    font-family: 'Dosis', sans-serif;
    color: #ffffff;
    font-size: 13px;
    padding: 11px 20px 10px 20px;
    text-decoration: none;
    width: 200px;
    float: left;
    margin-right: 10px;
    margin-bottom: 10px;
}

#star_results {
    color: #fff;
    margin-top: 10px;
}

#distanceFilterOne {
  background-color: #4c375b;
  border-color: #4c375b;
}

#distanceFilterTwo {
  background-color: #5d4b6b;
  border-color: #5d4b6b;
}

#distanceFilterThree {
  background-color: #6f5e7b;
  border-color: #6f5e7b;
}

#wrapper {
     width: 900px;
     margin: 0 auto;
}
#leftcolumn, #rightcolumn {
    float: left;
    min-height: 120px;
    color: white;
}
#leftcolumn {
     width: 50%;
}

#rightcolumn {
     width: 50%;
}

#star_constellation {
    background-color: #a89eaf;
    border-color: #a89eaf;
    color: #fff;
    width: 100%;
}

/*************************
 * 04. Code
 *************************/
 #code {
     min-height: 350px;
     padding: 50px 0;
     background-color: #0E0816;
     border-top: 1px solid #e7e7e7;
     border-bottom: 1px solid #e7e7e7;
 }

 .code-info {
  font-size: 16px;
  color: #8e8e8e;
  padding-bottom: 10px;
}

pre {
  padding: 0px;
}

code {
  font-family: Dosis, sans-serif;
}

/* Source: http://www.w3schools.com/howto/howto_js_accordion.asp */
button.accordion {
    background-color: #eee;
    color: #444;
    cursor: pointer;
    padding: 18px;
    width: 100%;
    border: none;
    text-align: left;
    outline: none;
    font-size: 15px;
    transition: 0.4s;
    border-radius: 8px;
}

button.accordion.active, button.accordion:hover {
    background-color: #ddd;
}

button.accordion:after {
    content: '\02795';
    font-size: 13px;
    color: #777;
    float: right;
    margin-left: 5px;
}

button.accordion.active:after {
    content: "\2796";
}

div.panel {
    padding: 0 18px;
    background-color: white;
    max-height: 0;
    overflow: hidden;
    transition: 0.6s ease-in-out;
    opacity: 0;
}

div.panel.show {
    opacity: 1;
    max-height: 2200px;
    background-color: #0e0816;
}

.panel {
  background-color: #060201;
  margin-bottom: 0px;
}

#topButton {
  float: right;
  background-color:#734c53;
  border-color:#734c53;
  color: #fff;
  margin-bottom: 5px;
}

#search {
  background-color: #9d8186;
}

#filter {
  background-color: #b09a9e;
}

#select {
  background-color: #c4b3b6;
}

/*************************
 * 05. Sources
 *************************/
#sources {
    min-height: 350px;
    padding: 50px 0;
    background-color: #241a2b;
    border-top: 1px solid #e7e7e7;
    border-bottom: 1px solid #e7e7e7;
}

